# baxter-cube-solver

./: README.md
cube-setup/: Makefile  cube_class.cpp  cube_class.hpp  face_class.cpp  face_class.hpp  helper.cpp  helper.hpp  main  main.cpp  row_class.cpp  row_class.hpp  test.cpp
cube_setup/: CMakeLists.txt  package.xml
cube_setup/src/: Makefile  cube_class.cpp  cube_class.hpp  face_class.cpp  face_class.hpp  helper.cpp  helper.hpp  main.cpp
cube_setup/test/: cube_tests.cpp  face_tests.cpp  helper_tests.cpp  solved_cube_builders.cpp  test_cube1_builders.cpp  test_cube2_builders.cpp
inverse_kinematics/: CMakeLists.txt  baxter_setup.sh  opencv_test.cpp  package.xml
inverse_kinematics/launch/: kinect_tf.launch  pickup_cube.launch
inverse_kinematics/src/: arm_class.cpp  arm_class.hpp  baxter.cpp  baxter.hpp  baxter_class.cpp  baxter_class.hpp  baxter_inspector_helpers.cpp  baxter_pickup_helpers.cpp  baxter_solver_helpers.cpp  color_reader_class.cpp  color_reader_class.hpp  endpoint_class.cpp  endpoint_class.hpp  face_display_class.cpp  face_display_class.hpp  gripper_class.cpp  gripper_class.hpp  ik_client_node.cpp  iks_class.cpp  iks_class.hpp  image_converter.cpp  master_node.cpp  opencv_canny.cpp  opencv_test.cpp  pcl_class.cpp  pcl_class.hpp  pcl_node.cpp  square_detector_class.cpp  square_detector_class.hpp  square_detector_node.cpp  universal_constants.hpp
inverse_kinematics/src/endpoint_refactoring/: endpoint_class.cpp  endpoint_class.hpp  iks_class.cpp  iks_class.hpp
inverse_kinematics/src/old/: ik_client_node.cpp  master_node.cpp  opencv_shapes.cpp  opencv_test.cpp  square_detector_node.cpp  threshhold_test.cpp
